--- a/blog/templates/blog/posteo_detail.html
+++ b/blog/templates/blog/posteo_detail.html
@@ -9,7 +9,7 @@
     <p>{{ posteo.bajada }}</p>
     <p>Creado por: {{ posteo.creador }}</p>
     <p>Fecha de publicación: {{ posteo.fecha_publicacion }}</p>
-    <img src="{{ posteo.imagen_url }}" alt="{{ posteo.imagen_alt }}" />
+    <img src="{{ posteo.imagen.url }}" alt="{{ posteo.imagen.alt }}" style="max-width: 400px; max-height: 300px;" />
     <p>{{ posteo.texto }}</p>
     
 
