--- a/perfiles/templates/perfiles/about.html
+++ b/perfiles/templates/perfiles/about.html
@@ -9,8 +9,17 @@
 </head>
 {% block contenido %}
 <body>
-    <h1>Acerca de Nosotros</h1>
-    <p>Esta es una página sobre nosotros.</p>
+    
+    <h1>Bienvenidos a Compumundo HiperMegaRed</h1>
+    <br><br>
+    <img src="media/media/WhatsApp Image 2023-05-01 at 14.24.25.jpeg" alt="Germán Wassermann" style="max-width: 400px; max-height: 300px;" />
+    <br>
+    <p>Mi nombre es Germán Wassermann y soy el creador de esta pagina.</p>
+    <p>Nací en Pehuajó Pcia de Buenos Aires, Argentina, pero viví la mayor parte de mi vida en Comodoro Rivadavia</p>
+    <p>Cuando terminé la secundaria, me mudé a La Plata a estudiar ingeniería Aeronáutica, carrera que terminé luego</p>
+    <p>de 5 años y medio. Hoy en día trabajo en Aerolíneas Argentinas en el mantenimiento de las aeronaves.</p>
+    <p>Hace unos años comencé en Coderhouse estudiando data analitycs y ahora dando mis primeros pasos en la programación</p>
+    <p>con Python y Django</p>
 </body>
 </html>
-{% endblock contenido %}
+{% endblock contenido %} 
