Agregado de posteos a panel administrativo

--- a/perfiles/templates/perfiles/formulario_avatar.html
+++ b/perfiles/templates/perfiles/formulario_avatar.html
@@ -7,4 +7,5 @@
  {{ form.as_p }}
  <input type="submit" value="Subir imagen"/>
 </form>
+<a href="{% url 'editar_perfil' %}">Volver al perfil</a>
 {% endblock contenido %}
