--- a/blog/templates/blog/posteo_detail.html
+++ b/blog/templates/blog/posteo_detail.html
@@ -10,7 +10,7 @@
     <p>Creado por: {{ posteo.creador }}</p>
     <p>Fecha de publicación: {{ posteo.fecha_publicacion }}</p>
     <img src="{{ posteo.imagen.url }}" alt="{{ posteo.imagen.alt }}" style="max-width: 400px; max-height: 300px;" />
-    <p>{{ posteo.texto }}</p>
+    <p>{{ posteo.texto| safe  }}</p>
     
 
     
