--- a/blog/templates/blog/lista_posteos.html
+++ b/blog/templates/blog/lista_posteos.html
@@ -17,25 +17,32 @@
          <td></td>
          <td></td>
        </tr>
-       {% for posteo in object_list %}
-       <tr>
-         <td>{{ posteo.id }}</td>
-         <td>{{ posteo.titulo }}</td>
-         <td>{{ posteo.creador }}</td>
-         <td>{{ posteo.fecha_publicacion }}</td>
-         <td>
-           <a href="{% url 'ver_posteo' posteo.id %}">Ver</a>
-         </td>
-         <td>
-           <a href="{% url 'editar_posteo' posteo.id %}">Editar</a>
-         </td>
-         <td>
-           <a href="{% url 'eliminar_posteo' posteo.id %}">
-             <i class="bi bi-trash"></i>
-           </a>
-         </td>
-       </tr>
-       {% endfor %}
+       {% if object_list %}
+          {% for posteo in object_list %}
+          <tr>
+            <td>{{ posteo.id }}</td>
+            <td>{{ posteo.titulo }}</td>
+            <td>{{ posteo.creador }}</td>
+            <td>{{ posteo.fecha_publicacion }}</td>
+            <td>
+              <a href="{% url 'ver_posteo' posteo.id %}">Ver</a>
+            </td>
+            <td>
+              <a href="{% url 'editar_posteo' posteo.id %}">Editar</a>
+            </td>
+            <td>
+              <a href="{% url 'eliminar_posteo' posteo.id %}">
+                <i class="bi bi-trash"></i>
+              </a>
+            </td>
+          </tr>
+          {% endfor %}
+
+       {% else  %}
+          <tr>
+            <td>No hay entradas aún</td>
+          </tr>
+       {% endif %}
      </tbody>
    </table>
 
