--- a/perfiles/templates/perfiles/about.html
+++ b/perfiles/templates/perfiles/about.html
@@ -17,8 +17,8 @@
     
     <h1>Bienvenidos a Compumundo HiperMegaRed</h1>
     <br><br>
-    <img src="media/media/WhatsApp Image 2023-05-01 at 14.24.25.jpeg" alt="Germán Wassermann" style="max-width: 400px; max-height: 300px;" />
-    <br>
+    <img src='/media/media/About.jpeg' alt="Germán Wassermann" style="max-width: 400px; max-height: 300px;" />
+    <br><br><br>
     <p>Mi nombre es Germán Wassermann y soy el creador de esta pagina.<br>
     Nací en Pehuajó Pcia de Buenos Aires, Argentina, pero viví la mayor parte de mi vida en Comodoro Rivadavia.<br>
     Cuando terminé la secundaria, me mudé a La Plata a estudiar ingeniería Aeronáutica, carrera que terminé luego
