--- a/perfiles/templates/perfiles/canal_detail.html
+++ b/perfiles/templates/perfiles/canal_detail.html
@@ -59,8 +59,8 @@
     MsgForm.addEventListener("submit", (event) => {
 
         event.preventDefault()
-        const targetDate = event.target
-        const formData = new FormData(targetDate)
+        const targetForm = event.target;
+        const formData = new FormData(targetForm)
 
         const xhr = new XMLHttpRequest()
         const endpoint = MsgForm.getAttribute("action")
@@ -70,8 +70,8 @@
 
         xhr.responseType = 'json'
 
-        xhr.setRequestHeader("HTTP_X_REQUESTED_WITH","XMLHttpRequest")
-        xhr.setRequestHeader("X-Requested-With","XMLHttpRequest")
+        xhr.setRequestHeader("HTTP_X_REQUESTED_WITH","XMLHttpRequest");
+        xhr.setRequestHeader("X-Requested-With","XMLHttpRequest");
 
         xhr.onload = () =>{
 
@@ -81,7 +81,7 @@
                 const respuestaData = xhr.response
                 let actualMensajeHtml = msgContainer.innerHTML
                 actualMensajeHtml += `<div class = ''><b>${respuestaData.username}</b><p>
-                    ${espuestaData.mensaje}</p></div>`
+                    ${respuestaData.mensaje}</p></div>`;
                     msgContainer.innerHTML = actualMensajeHtml
                     MsgForm.reset()
 
